--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,3 +10,11 @@ button{
     justify-content: center;
     align-items: center;
 }
+
+#main{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: coral;
+}
